# DigitDiffFlutter

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml
lib/: main.dart
rust/: Cargo.toml
rust/src/: api.rs  lib.rs  solver.rs
